src/QMainWindow.h


// 
// This file has been automatically generated by RaQt_maker V0.0.6.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQMainWindowCtor(void * parent, int  flags);
EXTERNC void * SCWQMainWindowCtor(void * parent, int  flags);
EXTERNC void * QWQMainWindowiconSize(void * obj);
EXTERNC void QWQMainWindowsetIconSize(void * obj, void * iconSize);
EXTERNC void QWQMainWindowsetDocumentMode(void * obj, int8_t  enabled);
EXTERNC void * QWQMainWindowmenuBar(void * obj);
EXTERNC void QWQMainWindowsetMenuBar(void * obj, void * menubar);
EXTERNC void * QWQMainWindowmenuWidget(void * obj);
EXTERNC void QWQMainWindowsetMenuWidget(void * obj, void * menubar);
EXTERNC void * QWQMainWindowstatusBar(void * obj);
EXTERNC void QWQMainWindowsetStatusBar(void * obj, void * statusbar);
EXTERNC void * QWQMainWindowcentralWidget(void * obj);
EXTERNC void QWQMainWindowsetCentralWidget(void * obj, void * widget);
EXTERNC void * QWQMainWindowtakeCentralWidget(void * obj);
EXTERNC void QWQMainWindowinsertToolBarBreak(void * obj, void * before);
EXTERNC void QWQMainWindowaddToolBar_1(void * obj, int  area, void * toolbar);
EXTERNC void QWQMainWindowaddToolBar_2(void * obj, void * toolbar);
EXTERNC void * QWQMainWindowaddToolBar_3(void * obj, char * title);
EXTERNC void QWQMainWindowinsertToolBar(void * obj, void * before, void * toolbar);
EXTERNC void QWQMainWindowremoveToolBar(void * obj, void * toolbar);
EXTERNC void QWQMainWindowremoveToolBarBreak(void * obj, void * before);
EXTERNC int QWQMainWindowtoolBarArea(void * obj, void * toolbar);
EXTERNC int8_t QWQMainWindowtoolBarBreak(void * obj, void * toolbar);
EXTERNC void QWvalidateCB_QMainWindow(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQMainWindowDtor(void *);
EXTERNC void SCWQMainWindowDtor(void *);